# systemd-plasmoid

./: .clang-format  .gitignore  CMakeLists.txt  README.md
lib/plasmoid/: CMakeLists.txt  metadata.desktop
lib/plasmoid/contents/config/: main.xml
lib/plasmoid/contents/ui/: Actions.qml  Toolbar.qml  UnitActions.qml  UnitItem.qml  main.qml
lib/qmlplugin/: CMakeLists.txt  Connection.cpp  Connection.h  QMLDebugger.cpp  QMLDebugger.h  QmlPlugin.cpp  QmlPlugin.h  UnitFileModel.cpp  UnitFileModel.h  UnitModel.cpp  UnitModel.h  qmldir
lib/systemd/: CMakeLists.txt  Changes.cpp  Changes.h  Changes_p.h  Manager.cpp  Manager.h  Unit.cpp  Unit.h  UnitFile.cpp  UnitFile.h  UnitFile_p.h  UnitInfo.cpp  UnitInfo.h  UnitInfo_p.h  debug.cpp  debug.h
tst/manual_execution/: CMakeLists.txt  manual_execution.cpp
